--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Spotify App",
-  "name": "Spotify React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
